[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapraid-runner"
dynamic = ["version"]
description = "Script to run snapraid and send email/notifications"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "apprise",
]

[project.scripts]
snapraid-runner = "snapraid_runner:main"

[tool.hatch.version]
path = "snapraid_runner/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["snapraid_runner"]
